# reactions-for-owl

./: .cruft.json  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  index.html  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
QualifiedIdentifier/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
assertion_date/: index.html
birth_date/: index.html
description/: index.html
entries/: index.html
examples/: README.md
external_identifier_value/: index.html
has_qualified_identifiers/: index.html
id/: index.html
name/: index.html
primary_email/: index.html
project/excel/: reactions_for_owl.xlsx
project/jsonld/: reactions_for_owl.context.jsonld  reactions_for_owl.jsonld
project/jsonschema/: reactions_for_owl.schema.json
project/owl/: reactions_for_owl.owl.ttl
provenance/: index.html
reactions-for-owl/: index.html
search/: search_index.json
tests/: __init__.py  test_data.py
vital_status/: index.html
(+16 files in other folders)
